Modified CORS Endpoints